syntax = "proto3";

package api.v1;

option go_package = "github.com/erry-az/go-init/api/v1";

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";

// UserService provides APIs for managing users
service UserService {
  // creates a new user
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }

  // retrieves a user by ID
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {
      get: "/api/v1/users/{id}"
    };
  }

  // retrieves all users
  rpc ListUsers(google.protobuf.Empty) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/api/v1/users"
    };
  }
}

message User {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string name = 2;
  string email = 3 [(buf.validate.field).string.email = true];
  string created_at = 4;
  string updated_at = 5;
}

message CreateUserRequest {
  string name = 1 [(buf.validate.field).string = {min_len: 1, max_len: 100}];
  string email = 2 [(buf.validate.field).string.email = true];
}

message GetUserRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message ListUsersResponse {
  repeated User users = 1;
}